# Genesis

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ✨-feature-request.md  🐛-bug-report.md  🐛-but-report.md  🔬-architecture-decision--adr-.md  🔬-architecture-decision-record.md
.github/workflows/: ci.yml
demo/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp
src/core/: Engine.cpp
